[tool.poetry]
name = "line-provider"
version = "0.1.0"
description = ""
authors = ["dmitrijpislakov <dmitriy.pislyakov@realtalk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.101.1"
aerich = "^0.7.2"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
asyncpg = "^0.28.0"
fastapi-jwt-auth = "^0.5.0"
aioredis = "1.3.1"
pylint = "^2.17.5"
pytest = "^7.4.0"
httpx = "^0.24.1"
trio = "^0.22.2"



[tool.aerich]
tortoise_orm = "src.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

